fix border of upload settings inputs getting clipped

--- a/www/css/layout.css
+++ b/www/css/layout.css
@@ -221,8 +221,6 @@ fieldset.togglable-field div {
     flex-direction: row;
     gap: 5px;
     align-items: center;
-    text-wrap: nowrap;
-    overflow: hidden;
     width: 0;
     visibility: hidden;
     flex-grow: 1;
